MComix 0.93

    - Removing a book from the library while its thumbnail wasn't loaded yet
      could result in a segmentation fault. This issue has been fixed.

    - Fixed sorting in the bookmark edit dialog not working as expected. The
      buttons "Sort ascending" and "Sort descending" have been removed, as
      they did the same as clicking on the "Name" header of the bookmarks
      table.

    - Fixed a bug that made it impossible to show toolbar/menu controls in
      fullscreen mode if "Automatically hide all toolbars in fullscreen" was
      enabled.

    - Library collection names did not accept non-ASCII characters. This has
      been fixed.

    - Added support for LHA/LZH archives, using either 'lha' or '7z' as
      extractors. Unicode support for Win32 is still problematic.

    - By selecting a folder instead of a file in the library's "Add book"
      dialog, all archives within the selected directory will be added to the
      library recursively.

    - Doing the same in the normal "Open" dialog will open all files within the
      directory.

    - MComix will now ask for confirmation when creating a new bookmark in an
      archive that was already bookmarked before. This allows the user to
      either create a new bookmark, or replace the old one with the current
      page.

    - ALT+Left mouse button and ALT+Right now advance one page, while ALT+Right
      mouse button/ALT+Left go back one page.

    - Settings in the Enhance dialog can now be remembered using the "Save"
      button.

    - MComix can now use Chardet (http://chardet.feedparser.org) for guessing
      filename encodings in archives, if installed.

MComix 0.92
Release date: 27.05.2011

    - Fixed a bug that made MComix save preview thumbnails to disk
      even if this behaviour was disabled in the preferences window.

    - Fixed a bug in the the archive editor that prevented it from actually
      saving the modified archive on Win32.
